--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
                 </div>
 
                 <div class="nav-link-wrapper">
+                    <a href="projects.html">Projects</a>
+                </div>
+
+                <div class="nav-link-wrapper">
                     <a href="aboutme.html">About</a>
                 </div>
             </div>
@@ -37,11 +41,6 @@
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <img src="images/18e9f4_00a3f438339543bf9e014d0482f39e19_mv2.jpg">
-                        </div>
-
-                        <div class="subtitle">
-                            This project required the class to introduce themselves in an Instagram carousel. We were given the freedom to do as we please, so I decided to create a comic with a monochrome colorscheme. The full comic can be seen <a href="https://www.behance.net/gallery/118734249/Online-Publishing-Introduction-Comic">here</a>.
-                        </div>
                     </div>
                 </div>
                 <div class="portfolio-item-wrapper">
