--- a/introcomic.html
+++ b/introcomic.html
@@ -14,6 +14,10 @@
                 </div>
 
                 <div class="nav-link-wrapper">
+                    <a href="projects.html">Projects</a>
+                </div>
+
+                <div class="nav-link-wrapper">
                     <a href="aboutme.html">About</a>
                 </div>
             </div>
@@ -40,6 +44,9 @@
                         </div>
 
                         <div class="subtitle">
+                            Year: 2020
+                            Medium: Illustrator
+                            Description:
                             This project required the class to introduce themselves in an Instagram carousel. We were given the freedom to do as we please, so I decided to create a comic with a monochrome colorscheme. The full comic can be seen <a href="https://www.behance.net/gallery/118734249/Online-Publishing-Introduction-Comic">here</a>.
                         </div>
                     </div>
