--- a/introcomic.html
+++ b/introcomic.html
@@ -46,8 +46,7 @@
                         <div class="subtitle">
                             Year: 2020
                             Medium: Illustrator
-                            Description:
-                            This project required the class to introduce themselves in an Instagram carousel. We were given the freedom to do as we please, so I decided to create a comic with a monochrome colorscheme. The full comic can be seen <a href="https://www.behance.net/gallery/118734249/Online-Publishing-Introduction-Comic">here</a>.
+                            Description: This project required the class to introduce themselves in an Instagram carousel. We were given the freedom to do as we please, so I decided to create a comic with a monochrome colorscheme. The full comic can be seen <a href="https://www.behance.net/gallery/118734249/Online-Publishing-Introduction-Comic">here</a>.
                         </div>
                     </div>
                 </div>
