--- a/index.html
+++ b/index.html
@@ -34,16 +34,17 @@
         </div>
 
         <div class="content-wrapper">
-
             <div class="portfolio-items-wrapper">
-              <a href="introcomic.html">
                 <div class="portfolio-item-wrapper">
-                    <div class="img-text-wrapper">
-                        <div class="logo-wrapper">
-                            <img src="images/18e9f4_00a3f438339543bf9e014d0482f39e19_mv2.jpg">
-                        </div>
-                    </div>
-              </a>
+                    <div class="portfolio-img-background" style="background-image: url(images/18e9f4_00a3f438339543bf9e014d0482f39e19_mv2.jpg)"></div>
+
+                    <a href="introcomic.html">
+                      <div class="img-text-wrapper">
+                          <div class="logo-wrapper">
+                              <img src="images/18e9f4_00a3f438339543bf9e014d0482f39e19_mv2.jpg">
+                          </div>
+                      </div>
+                    </a>
                 <div class="portfolio-item-wrapper">
                     <div class="portfolio-img-background" style="background-image: url(images/18e9f4_3a3665ddac6f4c258914acffb494657c_mv2.jpg)"></div>
 
