--- a/introcomic.html
+++ b/introcomic.html
@@ -44,9 +44,9 @@
                         </div>
 
                         <div class="subtitle">
-                            Year: 2020
-                            Medium: Illustrator
-                            Description: This project required the class to introduce themselves in an Instagram carousel. We were given the freedom to do as we please, so I decided to create a comic with a monochrome colorscheme. The full comic can be seen <a href="https://www.behance.net/gallery/118734249/Online-Publishing-Introduction-Comic">here</a>.
+                            <p>Year: 2020</p>
+                            <p>Medium: Illustrator</p>
+                            <p>Description: This project required the class to introduce themselves in an Instagram carousel. We were given the freedom to do as we please, so I decided to create a comic with a monochrome colorscheme. The full comic can be seen <a href="https://www.behance.net/gallery/118734249/Online-Publishing-Introduction-Comic">here</a>.</p>
                         </div>
                     </div>
                 </div>
