--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="portfolio-items-wrapper">
                 <div class="portfolio-item-wrapper">
                   <a href="introcomic.html">
-                    <div class="portfolio-img-background" style="background-image: url(images/18e9f4_00a3f438339543bf9e014d0482f39e19_mv2.jpg)"></div>
+                    <!--div class="portfolio-img-background" style="background-image: url(images/18e9f4_00a3f438339543bf9e014d0482f39e19_mv2.jpg)"></div-->
 
                       <div class="img-text-wrapper">
                           <div class="logo-wrapper">
