intro change and new html

--- a/kufivariations.html
+++ b/kufivariations.html
@@ -42,9 +42,9 @@
                         </div>
 
                         <div class="subtitle">
-                            <p>Year: 2020</p>
+                            <p>Year: 2021</p>
                             <p>Medium: Illustrator</p>
-                            <p>Description: This project required the class to introduce themselves in an Instagram carousel. We were given the freedom to do as we please, so I decided to create a comic with a monochrome colorscheme. The full comic can be seen <a href="https://www.behance.net/gallery/118734249/Online-Publishing-Introduction-Comic">here</a>.</p>
+                            <p>I designed a variety of display typefaces as part of an experimental typography course using the word "فاسقيناكموه." The aim was to experiment with different components such as fill, terminals, stroke, and dimension.</p>
                         </div>
                     </div>
                 </div>
