--- a/index.html
+++ b/index.html
@@ -37,8 +37,6 @@
             <div class="portfolio-items-wrapper">
                 <div class="portfolio-item-wrapper">
                   <a href="introcomic.html">
-                    <!--div class="portfolio-img-background" style="background-image: url(images/18e9f4_00a3f438339543bf9e014d0482f39e19_mv2.jpg)"></div-->
-
                       <div class="img-text-wrapper">
                           <div class="logo-wrapper">
                               <img src="images/18e9f4_00a3f438339543bf9e014d0482f39e19_mv2.jpg">
@@ -46,18 +44,14 @@
                       </div>
                     </a>
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image: url(images/18e9f4_3a3665ddac6f4c258914acffb494657c_mv2.jpg)"></div>
-
+                  <a href="kufivariations.html">
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <img src="images/18e9f4_3a3665ddac6f4c258914acffb494657c_mv2.jpg">
                         </div>
-
-                        <div class="subtitle">
-                            I designed a variety of display typefaces as part of an experimental typography course using the word "فاسقيناكموه." The aim was to experiment with different components such as fill, terminals, stroke, and dimension.
-                        </div>
                     </div>
                 </div>
+              </a>
                 <div class="portfolio-item-wrapper">
                     <div class="portfolio-img-background" style="background-image: url(images/18e9f4_114386e198304fb0b1e9f949464e4852_mv2.png)"></div>
 
