--- a/index.html
+++ b/index.html
@@ -36,18 +36,20 @@
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper">
                 <div class="portfolio-item-wrapper">
-                  <a href="introcomic.html">
                       <div class="img-text-wrapper">
                           <div class="logo-wrapper">
+                            <a href="introcomic.html">
                               <img src="images/18e9f4_00a3f438339543bf9e014d0482f39e19_mv2.jpg">
+                            </a>
                           </div>
                       </div>
-                    </a>
                 <div class="portfolio-item-wrapper">
                   <a href="kufivariations.html">
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
+                          <a href="kufivariations.html">
                             <img src="images/18e9f4_3a3665ddac6f4c258914acffb494657c_mv2.jpg">
+                          </a>
                         </div>
                     </div>
                 </div>
