--- a/kufivariations.html
+++ b/kufivariations.html
@@ -44,11 +44,11 @@
                         <div class="subtitle">
                             <p>Year: 2021</p>
                             <p>Medium: Illustrator</p>
-                            <p>I designed a variety of display typefaces as part of an experimental typography course using the word "فاسقيناكموه." The aim was to experiment with different components such as fill, terminals, stroke, and dimension.</p>
+                            <p>Description: I designed a variety of display typefaces as part of an experimental typography course using the word "فاسقيناكموه." The aim was to experiment with different components such as fill, terminals, stroke, and dimension.</p>
                         </div>
                     </div>
                 </div>
-                </div>
+              </div>
             </div>
         </div>
 </body>
