--- a/introcomic.html
+++ b/introcomic.html
@@ -14,7 +14,7 @@
               </div>
 
               <div class="nav-link-wrapper">
-                  <a href="projects.html">Projects</a>
+                  Projects
               </div>
 
               <div class="nav-link-wrapper">
