--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
                 </div>
               </a>
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image: url(images/18e9f4_114386e198304fb0b1e9f949464e4852_mv2.png)"></div>
-
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
+                          <a href="journeypostcards.html">
                             <img src="images/18e9f4_114386e198304fb0b1e9f949464e4852_mv2.png">
                         </div>
 
