--- a/index.html
+++ b/index.html
@@ -64,16 +64,11 @@
                     </div>
                 </div>
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image: url(images/18e9f4_1472977b2c994ee8b17f30a37f1f50f4_mv2.jpg)"></div>
-
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
+                          <a href="arabicfontspublication.html">
                             <img src="images/18e9f4_1472977b2c994ee8b17f30a37f1f50f4_mv2.jpg">
-                        </div>
-
-                        <div class="subtitle">
-                            This project consisted of reaching out to a type designer and interviewing them. After the interview, I designed a series of three covers, with the interview published in the first book of the series. I chose eL Seed, whose focus is calligraphy. The full publication can be
-viewed <a href="https://issuu.com/racineb/docs/we_need_more_arabic_fonts__combined_final_racine_b">here</a>.
+                          </a>
                         </div>
                     </div>
                 </div>
