--- a/arabicfontspublication.html
+++ b/arabicfontspublication.html
@@ -44,7 +44,7 @@
                         <div class="subtitle">
                             <p>Year: 2020</p>
                             <p>Medium: Illustrator, InDesign</p>
-                            <p>This project consisted of reaching out to a type designer and interviewing them. After the interview, I designed a series of three covers, with the interview published in the first book of the series. I chose eL Seed, whose focus is calligraphy. The full publication can be
+                            <p>Description: This project consisted of reaching out to a type designer and interviewing them. After the interview, I designed a series of three covers, with the interview published in the first book of the series. I chose eL Seed, whose focus is calligraphy. The full publication can be
 viewed <a href="https://issuu.com/racineb/docs/we_need_more_arabic_fonts__combined_final_racine_b">here</a>.</p>
                         </div>
                     </div>
