--- a/index.html
+++ b/index.html
@@ -73,15 +73,11 @@
                     </div>
                 </div>
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image: url(images/18e9f4_a272c3f336f54c45a448d36a0b4565f5_mv2.png)"></div>
-
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
+                          <a href="mangoillustrations.html">
                             <img src="images/18e9f4_a272c3f336f54c45a448d36a0b4565f5_mv2.png">
-                        </div>
-
-                        <div class="subtitle">
-                            This was a warm up project that aimed to create two illustrations of any fruit: one stylized and one more realistic.
+                          </a>
                         </div>
                     </div>
                 </div>
