--- a/index.html
+++ b/index.html
@@ -82,15 +82,11 @@
                     </div>
                 </div>
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image: url(images/18e9f4_c37c96336b70416db9720383745d29fe_mv2.png)"></div>
-
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
+                          <a href="visualizingasentance.html">
                             <img src="images/18e9f4_c37c96336b70416db9720383745d29fe_mv2.png">
-                        </div>
-
-                        <div class="subtitle">
-                            This project took a quote from a famous designer and created a poster that reflected the designer's style. The quote in this poster is from El Lissitzky, a Russian constructivist designer.
+                          </a>
                         </div>
                     </div>
                 </div>
