--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
                     Projects
                 </div>
 
+                <div class="dropdown">
+                  <button class="dropbtn">Projects</button>
+                  <div class="dropdown-content">
+                    <a href="#">Introduction Comic</a>
+                    <a href="#">Kufi Variations</a>
+                    <a href="#">Journey Postcards</a>
+                    <a href="#">Arabic Fonts Publication</a>
+                    <a href="#">Mango Illustrations</a>
+                    <a href="#">Visualizing a Sentance</a>
+                  </div>
+                </div>
+
                 <div class="nav-link-wrapper">
                     <a href="aboutme.html">About</a>
                 </div>
