--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
                 <div class="dropdown">
                   <div class"nav-link-wrapper">Projects</div>
                   <div class="dropdown-content">
-                    <a href="#">Introduction Comic</a>
-                    <a href="#">Kufi Variations</a>
-                    <a href="#">Journey Postcards</a>
-                    <a href="#">Arabic Fonts Publication</a>
-                    <a href="#">Mango Illustrations</a>
-                    <a href="#">Visualizing a Sentance</a>
+                    <a href="introcomic.html">Introduction Comic</a>
+                    <a href="kufivariations.html">Kufi Variations</a>
+                    <a href="journeypostcards.html">Journey Postcards</a>
+                    <a href="arabicfontspublication.html">Arabic Fonts Publication</a>
+                    <a href="mangoillustrations.html">Mango Illustrations</a>
+                    <a href="visualizingasentance.html">Visualizing a Sentance</a>
                   </div>
                 </div>
 
