--- a/introcomic.html
+++ b/introcomic.html
@@ -39,6 +39,8 @@
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <img src="images/18e9f4_00a3f438339543bf9e014d0482f39e19_mv2.jpg">
+                            <img src="images/18e9f4_00a3f438339543bf9e014d0482f39e19_mv2.jpg">
+                            <img src="images/18e9f4_00a3f438339543bf9e014d0482f39e19_mv2.jpg">
                         </div>
 
                         <div class="subtitle">
